[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["suzu6 <y.suzumura0604@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# I update to latest version crate.
num = "0.4.0"
image = "0.23.14"
rayon = "1.5.0"