[package]
name = "imgui"
version = "0.1.0"
authors = ["suzu6 <y.suzumura0604@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.32.2"
gl = "0.14.0"
cgmath = "0.17.0"
c_str_macro = "1.0.2"
imgui = "0.2.1"
imgui-sdl2 = "0.7.0"
imgui-opengl-renderer = "0.6.0"